--- a/AppHelp/app/src/main/AndroidManifest.xml
+++ b/AppHelp/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".CadastroActivity" />
         <activity android:name=".MenuPrincipalActivity" />
-        <activity android:name=".CriarAtividade"></activity>
+        <activity android:name=".CriarAtividadeActivity"></activity>
     </application>
 
 </manifest>
