--- a/AppHelp/app/src/main/AndroidManifest.xml
+++ b/AppHelp/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".control.AtividadesActivity" />
         <activity android:name=".control.PerfilActivity" />
         <activity android:name=".control.CriarHorarioActivity" />
-        <activity android:name=".control.HorariosActivity"></activity>
+        <activity android:name=".control.HorariosActivity" />
+        <activity android:name=".control.MostrarAtividadesActivity"></activity>
     </application>
 
 </manifest>
