--- a/AppHelp/app/build.gradle
+++ b/AppHelp/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.0.4'
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
